# web/static/swagger.yaml
@@ -807,6 +807,10 @@ definitions:
         type: string
       player_count:
         type: integer
+      server_id:
+        type: string
+      server_name:
+        type: string
       start_time:
         type: string
     type: object
